# stl-book-club-v2

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/stl_book_club_v2/: app.py
